Final Design Changes

--- a/assets/static/css/style.css
+++ b/assets/static/css/style.css
@@ -770,7 +770,7 @@ img {
 /* Contact
 ---------------------------------*/
 .page_section.contact {
-    padding: 90px 0 100px;
+    padding: 90px 50px 100px;
 }
  
 .contact_section {
