--- a/assets/templates/UserLogin.html
+++ b/assets/templates/UserLogin.html
@@ -30,7 +30,7 @@
                     </form>
                     {% if messages %}
                     {% for message in messages %}
-                    <font color='RED'> {{ message }}</font>
+                    <font color='white'> {{ message }}</font>
                     {% endfor %}
                     {% endif %}
                         </div>
