--- a/assets/templates/users/UserHome.html
+++ b/assets/templates/users/UserHome.html
@@ -10,8 +10,13 @@
                     <div class="col-lg-5 col-sm-7">
                         <div class="top_left_cont zoomIn wow animated">
 
-                            <h2>An Electricity <strong> Load Forecasting Algorithm Based</strong> on Kernel Lasso Regression</h2>
-                            <p>Electricity load forecasting is an important guarantee for the safe and economic operation of power grids. For electricity load data with higher dimensions, the forecasting effect of traditional linear regression algorithms are usually not ideal</p>
+                            <h2>Kernel Lasso Regression Algorithm for <strong>Predicting Electricity Loads</strong></h2>
+                            <p>Forecasting electricity demand is a crucial safeguard for the efficient and safe operation of power systems.
+                                In general, the forecasting performance of conventional linear regression techniques is subpar for power demand data with greater dimensions.
+                                The linear technique may handle non-linear data by using kernel functions to translate the data to a high-dimensional space.
+                                In order to tackle the regression analysis problem for non-time series data, kernel function is added to the lasso linear regression approach and is applied to non-linear situations.
+                                The prediction effect of kernel lasso regression is superior to lasso regression in terms of minimal mean square error and minimum average across 851 consecutive days utilizing the 96-point electrical load data of consumers in Shanghai.
+                                </p>
                             <!--<a href="#service" class="read_more2">Read more</a>-->
                         </div>
                     </div>
@@ -36,10 +41,10 @@
                             alt=""></div>
                     <div class=" col-lg-7 col-md-7 col-sm-7 col-xs-12 pull-left">
                         <div class=" delay-01s animated fadeInDown wow animated">
-                            <h3>An Electricity Load Forecasting Algorithm Based on Kernel Lasso Regression</h3><br/>
-                            <p>Electricity load forecasting is an important guarantee for the safe and economic operation of power grids. For electricity load data with higher dimensions, the forecasting effect of traditional linear regression algorithms are usually not ideal. Kernel function can be used to map the data to a high-dimensional space, so that can make the linear method handle non-linear data. This paper introduces the kernel function into the lasso linear regression method and applies it to non-linear problems to solve the regression analysis problem of non-time series data. Through using the 96-point electricity load data of users in Shanghai since 2014 for 851 consecutive days, the prediction effect of kernel lasso regression is better than lasso regression in terms of minimum mean square error and minimum average percentage error, which shows that the method can achieve better power load forecasting results.</p>
+                            <h3>Kernel Lasso Regression Algorithm for <strong>Predicting Electricity Loads</h3><br/>
+                            <p>Electricity load forecasting that is accurate and trustworthy can offer dependable decision-making support for the planning and operation of the electricity system as well as a guarantee for the efficient and safe functioning of the system. It's been a popular area of study both domestically and internationally how to increase predicting accuracy. Lasso is a commonly used variable selection tool that was first developed by Tibshirani in 1996. In order to increase the efficiency of the lasso approach, methods like Iteratively Reweighted Least Squares (IRLS), ε-boosting, Least Angle Regression (Lars), and piecewise linear have been proposed. However, in the case of electricity-loads, the lasso's predictions are less accurate. Combining Kernal function, which can deal with non-linearity, with Lasso Regression can signifacntly improve prediction of electricity-loads.</p>
                         </div>
-                        <div class="work_bottom"><span>Want to know more..</span> <a href="https://ieeexplore.ieee.org/document/9510772" target="_blank" class="contact_btn">Contact Us</a>
+                        <div class="work_bottom"><span>Want to know more..</span> <a href="mailto: mashettyvishwaja2102@gmail.com" target="_blank" class="contact_btn">Contact Us</a>
                         </div>
                     </div>
 
