--- a/assets/templates/users/forecast.html
+++ b/assets/templates/users/forecast.html
@@ -6,6 +6,7 @@ table {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
   width: 100%;
+  color: black;
 }
 
 table td, table th {
@@ -46,7 +47,7 @@ tr:nth-child(even) {
     <div class="hero_wrapper">
         <div class="container">
             <div class="hero_section">
-                <div class="row">
+                <div class="row" style="margin-bottom: 50px;">
                     <h2>Forecast Data</h2>
                      {{data|safe}}
 
