--- a/assets/templates/UserRegistrations.html
+++ b/assets/templates/UserRegistrations.html
@@ -16,7 +16,7 @@
 
                             <center>
                             <h1 class="aligncenter">Registration Form</h1>
-                                <form action="{%url 'UserRegisterActions'%}" method="POST" style="width:100%">
+                                <form action="{%url 'UserRegisterActions'%}" method="POST">
 
                                     {% csrf_token %}
                                     <table>
