--- a/assets/templates/admins/admin_base.html
+++ b/assets/templates/admins/admin_base.html
@@ -47,7 +47,7 @@
 <footer class="footer_wrapper" id="contact">
     <div class="container">
         <div class="footer_bottom"><span>Copyright © 2023,    Template by <a
-                href="#">Alex Corporations</a>. </span></div>
+                href="#">Kernel Lasso</a>. </span></div>
     </div>
 </footer>
 
