--- a/assets/templates/base.html
+++ b/assets/templates/base.html
@@ -44,10 +44,10 @@
 <!--Aboutus-->
 {%endblock%}
 <!--Footer-->
-<footer class="footer_wrapper" id="contact">
+<footer class="footer_wrapper" id="contact" style="padding: 50px;">
     <div class="container">
         <div class="footer_bottom"><span>Copyright © 2023,    Template by <a
-                href="#">Kernal Lasso</a>. </span></div>
+                href="#">Kernel Lasso</a>. </span></div>
     </div>
 </footer>
 
