--- a/assets/templates/users/ml_results.html
+++ b/assets/templates/users/ml_results.html
@@ -6,14 +6,17 @@ table {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
   width: 100%;
+  margin-bottom: 30%;
 }
 
 table td, table th {
   border: 1px solid #ddd;
   padding: 8px;
+  color: black;
 }
 
 table tr:nth-child(even){background-color: #f2f2f2;}
+table tr:nth-child(odd){background-color: #f2f2f2;}
 
 table tr:hover {background-color: #ddd;}
 
