--- a/assets/templates/users/predictForm.html
+++ b/assets/templates/users/predictForm.html
@@ -95,7 +95,7 @@
 
                                     </tr>
                                     <tr>
-                                        <td><h3>Conumption: {{pred}}</h3></td>
+                                        <td><h3>Consumption: {{pred}}</h3></td>
                                         <td><input type="submit" value="submit"></td>
 
                                     </tr>
