Made all UI changes

--- a/assets/templates/AdminLogin.html
+++ b/assets/templates/AdminLogin.html
@@ -9,11 +9,11 @@
                 <div class="row">
                     <div class="col-lg-5 col-sm-7">
                         <div class="top_left_cont zoomIn wow animated">
- <h2 class="row justify-content-center text-dark"><i class="fa fa-sign-in-alt"
-                                                                        style="color: white; pointer-events: none;">&nbsp;Admin
-                        Log In</i></h2>
-                    <form action="{%url 'AdminLoginCheck'%}" method="post" novalidate>
-                        {%csrf_token%}
+                            <h2 class="row justify-content-center text-dark">
+                                <i class="fa fa-sign-in-alt"style="color: white; pointer-events: none;">&nbsp;Admin Log In</i>
+                            </h2>
+                            <form action="{%url 'AdminLoginCheck'%}" method="post" novalidate>
+                            {%csrf_token%}
 
                         <div style="color: white" id="div_id_username" class="form-group"><label for="id_username" class=" requiredField">
                             Username<span class="asteriskField">*</span> </label>
