--- a/assets/templates/UserRegistrations.html
+++ b/assets/templates/UserRegistrations.html
@@ -1,103 +1,183 @@
-{%extends 'base.html'%}
+{% extends 'base.html' %}
 {% load static %}
-{%block contents%}
 
+{% block contents %}
 <section id="aboutUs"><!--Aboutus-->
     <div class="inner_wrapper">
         <div class="container">
             <div class="inner_section">
                 <div class="row">
-                    <div class=" col-lg-4 col-md-4 col-sm-4 col-xs-12 pull-right">
-                        <img                            src="{%static 'img/about-img.jpg'%}" class="img-circle delay-03s animated wow zoomIn"
-                            alt=""></div>
-                    <div class=" col-lg-7 col-md-7 col-sm-7 col-xs-12 pull-left">
-                        <div class=" delay-01s animated fadeInDown wow animated">
-                            <p>
-
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 pull-right">
+                        <img src="{% static 'img/about-img.jpg' %}" class="img-circle delay-03s animated wow zoomIn" alt="">
+                    </div>
+                    <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12 pull-left">
+                        <div class="delay-01s animated fadeInDown wow animated">
                             <center>
-                            <h1 class="aligncenter">Registration Form</h1>
-                                <form action="{%url 'UserRegisterActions'%}" method="POST">
-
+                                <div class = "form-hd">
+                                    <h1>Registration Form</h1>
+                                    <p><i>All fields are required</i></p>
+                                </div>
+                                <br />
+                                <form action="{% url 'UserRegisterActions' %}" method="POST">
                                     {% csrf_token %}
                                     <table>
                                         <tr>
-                                            <td>User Name</td>
-                                            <td style="color:black">{{form.name}}</td>
+                                            <td><label class="animated animated-label fadeInRight" for="id_name">User Name:</label></td>
+                                            <td>
+                                                {{ form.name }}
+                                                <span class = "error-message"></span>
+                                            </td>
                                         </tr>
                                         <tr>
-                                            <td>Login ID</td>
-                                            <td style="color:black">{{form.loginid}}</td>
+                                            <td><label class="animated animated-label fadeInRight" for="id_loginid">Login ID:</label></td>
+                                            <td>
+                                                {{ form.loginid }}
+                                                <span class = "error-message"></span>
+                                            </td>
                                         </tr>
                                         <tr>
-                                            <td>Password</td>
-                                            <td style="color:black">{{form.password}}</td>
+                                            <td><label class="animated animated-label fadeInRight" for="id_password">Password:</label></td>
+                                            <td>
+                                                {{ form.password }}
+                                                <span class = "error-message"></span>
+                                            </td>
                                         </tr>
                                         <tr>
-                                            <td>Mobile</td>
-                                            <td style="color:black">{{form.mobile}}</td>
+                                            <td><label class="animated animated-label fadeInRight" for="id_mobile">Mobile:</label></td>
+                                            <td>
+                                                {{ form.mobile }}
+                                                <span class = "error-message"></span>
+                                            </td>
                                         </tr>
                                         <tr>
-                                            <td>email</td>
-                                            <td style="color:black">{{form.email}}</td>
+                                            <td><label class="animated animated-label fadeInRight" for="id_email">Email:</label></td>
+                                            <td>
+                                                {{ form.email }}
+                                                <span class = "error-message"></span>
+                                            </td>
                                         </tr>
                                         <tr>
-                                            <td>Locality</td>
-                                            <td style="color:black">{{form.locality}}</td>
+                                            <td><label class="animated animated-label fadeInRight" for="id_locality">Locality:</label></td>
+                                            <td>
+                                                {{ form.locality }}
+                                            </td>
                                         </tr>
                                         <tr>
-                                            <td>Address</td>
-                                            <td style="color:black">{{form.address}}</td>
+                                            <td><label class="animated animated-label fadeInRight" for="id_address">Address:</label></td>
+                                            <td>
+                                                {{ form.address }}
+                                            </td>
                                         </tr>
                                         <tr>
-                                            <td>City</td>
-                                            <td style="color:black">{{form.city}}</td>
+                                            <td><label class="animated animated-label fadeInRight" for="id_city">City:</label></td>
+                                            <td>
+                                                {{ form.city }}
+                                            </td>
                                         </tr>
                                         <tr>
-                                            <td>State</td>
-                                            <td style="color:black">{{form.state}}</td>
+                                            <td><label class="animated animated-label fadeInRight" for="id_state">State:</label></td>
+                                            <td>
+                                                {{ form.state }}
+                                            </td>
                                         </tr>
                                         <tr>
-
-                                            <td style="color:black">{{form.status}}</td>
+                                            <td><label class="animated animated-label fadeInRight" for="id_status">Status:</label></td>
+                                            <td>{{ form.status }}</td>
                                         </tr>
                                         <tr>
                                             <td></td>
                                             <td>
-                                                <button class="btn btn-block btn-primary text-white py-3 px-5"
-                                                        style="margin-center:20%;"
-                                                        type="submit">
-                                                    Register
-                                                </button>
+                                                <button class="btn btn-block btn-primary text-white py-3 px-5" style="margin-center:20%;" type="submit">Register</button>
                                             </td>
                                         </tr>
                                         <tr>
-                                            <td>
-                                                <div class="form-group mt-3">
-                                                    <span>&nbsp;</span>
-                                                </div>
+                                            <td colspan="2">
+                                                {% if messages %}
+                                                    {% for message in messages %}
+                                                        <font color='red'>{{ message }}</font>
+                                                    {% endfor %}
+                                                {% endif %}
                                             </td>
                                         </tr>
-
-                                        {% if messages %}
-                                        {% for message in messages %}
-                                        <font color='red'> {{ message }}</font>
-                                        {% endfor %}
-                                        {% endif %}
-
                                     </table>
                                 </form>
                             </center>
-                            </p>
                         </div>
-
                     </div>
-
                 </div>
-
-
             </div>
         </div>
-    </div>
+    </div>    
 </section>
 
-{%endblock%}
+<script>
+    document.addEventListener('DOMContentLoaded', () => {
+        const inputs = document.querySelectorAll('input, textarea');
+
+        inputs.forEach(input => {
+            input.addEventListener('input', () => {
+            const pattern = input.getAttribute('pattern');
+            if (pattern) {
+                console.log(pattern);
+                const regex = new RegExp(`^${pattern}$`);
+                const value = input.value;
+                const valid = regex.test(value);
+                const errorSpan = input.nextElementSibling;
+                if (!valid) {
+                    errorSpan.innerHTML = input.getAttribute('title').replaceAll(". ", "<br />");
+                }
+                else {
+                        errorSpan.innerHTML = "";
+                }
+            }
+            });
+
+        });
+    });
+
+</script>
+  
+
+<style>
+input[type="text"],
+input[type="password"],
+input[type="email"],
+input[type="tel"],
+textarea {
+    width: 100%;
+    padding: 10px 20px;
+    /* margin-bottom: 16px; */
+    box-sizing: border-box;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    transition: border-color 0.3s;
+}
+
+input[type="text"]:focus,
+input[type="password"]:focus,
+input[type="email"]:focus,
+input[type="tel"]:focus,
+textarea:focus {
+    border-color: #4CAF50;
+    outline: none;
+}
+
+label {
+    margin: 0 30px 15px 0;
+}
+
+.form-hd p {
+    color: red;
+}
+
+.error-message {
+    color: red;
+    display: inline-block;
+    font-size: 12px;
+    margin-top: 5px;
+    width: 150px;
+}
+
+    
+</style>
+{% endblock %}
