--- a/assets/templates/users/user_base.html
+++ b/assets/templates/users/user_base.html
@@ -32,7 +32,7 @@
                         <li><a href="{%url 'usersViewDataset'%}">Dataset</a></li>
                         <li><a href="{%url 'lassoResults'%}">Results</a></li>
                         <li><a href="{%url 'userPrediction'%}">Predict</a></li>
-                        <!-- <li><a href="{%url 'userForeCast'%}">ForeCast</a></li> -->
+                        <li><a href="{%url 'userForeCast'%}">ForeCast</a></li>
                         <li><a href="{%url 'index'%}">Log out</a></li>
                     </ul>
                 </div>
