--- a/assets/templates/users/predictForm.html
+++ b/assets/templates/users/predictForm.html
@@ -1,6 +1,8 @@
 {%extends 'users/user_base.html'%}
 {%load static%}
 {%block contents%}
+
+<link rel="stylesheet" href="{% static 'css/info-card.css' %}">
 <style>
     table {
         font-family: Arial, Helvetica, sans-serif;
@@ -33,64 +35,76 @@
     <div class="inner_wrapper">
         <div class="container">
             <div class="inner_section">
+                <div class="card">
+                    <div class="info-body">
+                        <h5 class="info-title">Predict Electricity Loads</h5> <br />
+                        <p class="info-text">
+                            Enter electricity-load records of a week below, and our model will instantly predict the next day's load for you. Try it out now!
+                        </p>
+                        <br />
+                        <i style="font-weight: bold;">Remember to provide all the 7 load values, in Kilo-Watt hours</i>
+                    </div>
+                </div>
+                <br />
                 <div class="row">
                     <div class=" col-lg-4 col-md-4 col-sm-4 col-xs-12 pull-right">
                         <img src="{%static 'img/about-img.jpg'%}" class="img-circle delay-03s animated wow zoomIn"
-                             alt=""></div>
+                             alt="">
+                    </div>
                     <div class=" col-lg-7 col-md-7 col-sm-7 col-xs-12 pull-left">
                         <div class=" delay-01s animated fadeInDown wow animated">
                             <p>
-                            <h2>Predict Electricity Loads</h2>
+                            <!-- <h2>Predict Electricity Loads</h2> -->
                             <form id = "prediction-form" action="/userPrediction/" method="post">
                                 {% csrf_token %}
                                 <table border="1" class="dataframe">
                                     <thead>
                                     <tr style="text-align: right;">
                                         <th>Days</th>
-                                        <th>Electricity loads in Kilo-Watts (kW)</th>
+                                        <th>Electricity loads in Kilo-Watt hours (kWh)</th>
 
                                     </tr>
                                     </thead>
                                     <tbody>
                                     <tr>
                                         <td>Day 1</td>
-                                        <td><input type="number" min="1" max="1000" step="0.1" name="day1" required><p class = 'kW'>kW</p>
+                                        <td><input type="number" min="1" max="1000" step="0.1" name="day1" required><p class = 'kWh'>kWh</p>
                                         </td>
 
                                     </tr>
                                     <tr>
                                         <td>Day 2</td>
-                                        <td><input type="number" min="1" max="1000" step="0.1" name="day2" required><p class = 'kW'>kW</p>
+                                        <td><input type="number" min="1" max="1000" step="0.1" name="day2" required><p class = 'kWh'>kWh</p>
                                         </td>
 
                                     </tr>
                                     <tr>
                                         <td>Day 3</td>
-                                        <td><input type="number" min="1" max="1000" step="0.1" name="day3" required><p class = 'kW'>kW</p>
+                                        <td><input type="number" min="1" max="1000" step="0.1" name="day3" required><p class = 'kWh'>kWh</p>
                                         </td>
 
                                     </tr>
                                     <tr>
                                         <td>Day 4</td>
-                                        <td><input type="number" min="1" max="1500" step="0.1" name="day4" required><p class = 'kW'>kW</p>
+                                        <td><input type="number" min="1" max="1500" step="0.1" name="day4" required><p class = 'kWh'>kWh</p>
                                         </td>
 
                                     </tr>
                                     <tr>
                                         <td>Day 5</td>
-                                        <td><input type="number" min="1" max="1500" step="0.1" name="day5" required><p class = 'kW'>kW</p>
+                                        <td><input type="number" min="1" max="1500" step="0.1" name="day5" required><p class = 'kWh'>kWh</p>
                                         </td>
 
                                     </tr>
                                     <tr>
                                         <td>Day 6</td>
-                                        <td><input type="number" min="1" max="1500" step="0.1" name="day6" required><p class = 'kW'>kW</p>
+                                        <td><input type="number" min="1" max="1500" step="0.1" name="day6" required><p class = 'kWh'>kWh</p>
                                         </td>
 
                                     </tr>
                                     <tr>
                                         <td>Day 7</td>
-                                        <td><input type="number" min="1" max="1500" step="0.1" name="day7" required><p class = 'kW'>kW</p>
+                                        <td><input type="number" min="1" max="1500" step="0.1" name="day7" required><p class = 'kWh'>kWh</p>
                                         </td>
 
                                     </tr>
@@ -122,7 +136,7 @@
     td {
         width: 50%;
     }
-    .kW {
+    .kWh {
         display: inline;
         margin-left: 5px;
         color: #000000;
@@ -152,7 +166,7 @@ predictBtn.addEventListener('click', function(event) {
     .then(response => response.json())
     .then(data => {
         // add code to reduce the precision of the result
-        result.innerHTML = data.prediction[0].toFixed(2) + 'kW';
+        result.innerHTML = data.prediction[0].toFixed(2) + ' kWh';
     })
     .catch(error => {
       console.error('Error:', error);
