--- a/assets/templates/users/viewData.html
+++ b/assets/templates/users/viewData.html
@@ -1,6 +1,8 @@
 {%extends 'users/user_base.html'%}
 {%load static%}
 {%block contents%}
+<link rel="stylesheet" href="{% static 'css/info-card.css' %}" type="text/css">
+
 <style>
 table {
   font-family: Arial, Helvetica, sans-serif;
@@ -46,14 +48,29 @@ tr:nth-child(even) {
 tr:nth-child(odd) {
   background-color: #dddddd;
 }
+
 </style>
 <section id="hero_section" class="top_cont_outer">
     <div class="hero_wrapper">
         <div class="container">
             <div class="hero_section">
+              <div class="row">
+                <div class="card">
+                  <div class="info-body">
+                    <h5 class="info-title">Electricity Load Dataset</h5>
+                    <p class="info-text">
+                      This dataset is a time-series dataset that records the electricity load of Shanghai households from 02-01-2000 to 24-02-2019. The dataset has eight columns: 'date', 'day1', 'day2', 'day3', 'day4', 'day5', 'day6', 'day7', and 'nextDay'. The 'date' column records the date of the week, and the rest of the columns record the electricity load of households for that day of the week. The 'nextDay' column records the average electricity load of the next day based on the electricity loads of the seven previous days.
+                    </p> <br />
+                    <p class="info-text">
+                      The dataset is high-dimensional because it has many features, i.e., electricity loads for each day of the week, and is non-linear because the relationship between electricity load and time is not a simple linear relationship. Moreover, since the dataset is a time-series, there may be seasonality and trends in the data that can make it more complex.
+                    </p>
+                    <a href="{% url 'download_file' 'Shanghai_dataset.csv'%}" class="btn download-btn">Download Dataset</a>
+                  </div>
+                </div>
+                
+              </div>
                 <div class="row" style="margin-bottom: 50px;">
                      {{data|safe}}
-
                 </div>
             </div>
         </div>
