--- a/assets/static/css/style.css
+++ b/assets/static/css/style.css
@@ -211,7 +211,7 @@ p {
 ---------------------------------*/
 
 .top_cont_outer {
-    background: #df0031;
+    /* background: #df0031; */
     position: relative;
 }
 
